THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.

PL-node-v0.1.6
 - ADD: media queries found in css added to ish controls
 - ADD: basic lineage support
 - ADD: more unit tests

PL-node-v0.1.5
 - ADD: Live reload support for grunt serve task
 - THX: thanks @marcinmodestowicz for the configuration fix. VERY useful :)

PL-node-v0.1.4
 - FIX: Resolved issue with nested pattern rendering
 - FIX: Supporting flat pattern name regex's in unix-systems
 - THX: thanks @torbs for the issue and pull request

PL-node-v0.1.3
 - ADD: Pattern states
 - ADD: Ships with grunt connect if you are into that kinda thing
 - FIX: Removed all grunt dependencies from patternlab.js
 - FIX: Ignore dotfiles
 - THX: thanks @bramsmulders for suggestion and help with mac

PL-node-v0.1.2
 - ADD: Abstracted template rendering into a function for easier swapping of rendering engine
 - ADD: Smarter filtering of files to support other templates Thanks 
 - ADD: Help command line agument
 - ADD: Version command line argument
 - ADD: Patterns only command line argument
 - ADD: IshControlsVisible options. Can now hide any ishControls you like.
 - ADD: Documented the command line interface
 - CHG: Put debug flag in conf.json instead of package.json
 - CHG: Aligned styleguide css with patternlab-php
 - FIX: Removed node .8 from travis
 - FIX: Code and annotation support in patternlab viewer
 - THX: thanks @ivanmayes and Shoptology crew for contibutions!

PL-node-v0.1.1
 - FIX: Removed View All Pattern SubItem Link Logic, no longer in reference implementation
 - ADD: Flag for generating debug file
 - ADD: Travis CI test support!
 - ADD: Contributing file
 - ADD: Repository to package.json
 - FIX: Manage Mustache dependency using NPM
 - THX: thank you @tbranyen for tip on repository, Mustache, and NPM!

PL-node-v0.1.0
 - FIX: Links to patterns did not work when visited from a server
 - FIX: Patterns with hyphens in the name were breaking the iframe messaging