@@ -1,5 +1,8 @@
 THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 
+PL-node-v0.1.7
+ - ADD: pattern export
+
 PL-node-v0.1.6
  - ADD: media queries found in css added to ish controls
  - ADD: basic lineage support
